--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -80,7 +80,7 @@ button {
 
 .container-films header .group-home-info .home-info {
 	margin:50px 0;
-		transition:0.2s;
+	transition:0.2s;
 }
 
 header .group-home-info .home-info h1 {
@@ -114,7 +114,8 @@ header .group-home-info .home-info button:hover {
 
 
 header .group-home-info img {
-	width: 384px;
+	width:100%;
+	max-width: 384px;
 }
 
 header #waves-header {
@@ -127,11 +128,42 @@ header #waves-header {
 section {
 	position: relative;
 	padding:0 100px;
-	text-align:center;
 }
 
-section h2 {
-	font-size:40px;
+section .films-filter {
+	display:flex;
+	justify-content:space-around;
+	align-items: center;
+		
+}
+
+section .films-filter h2 {
+	font-size:35px;
+}
+
+section .films-filter .filter {
+	display:flex;
+	justify-content:center;
+	align-items:center;
+}
+
+section .films-filter .filter select {
+	width:200px;
+	height:50px;
+	font-size:24px;
+	background:white;
+	border:3px solid #333;
+	border-radius:25px;
+	margin-right:20px;
+	padding:0 30px;
+}
+
+section .films-filter .filter button {
+	height:50px;
+	width:50px;
+	background:#333;
+	border-radius:50%;
+	border:none;
 }
 
 section ul {
@@ -145,14 +177,37 @@ section ul {
 section ul li {
 	background:white;
 	box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
-	height:300px;
+	padding:20px 40px;
+	height:200px;
 	display:flex;
-	justify-content:center;
-	align-items:center;
-	font-size:30px;
+	flex-direction:column;
+	justify-content:space-between;
+
 }
 
-section button {
+section ul li p {
+	font-size:20px;
+	font-weight: 500;
+}
+
+section ul li p span {
+	font-size:18px;
+	font-weight: 500;
+	color:#646464;
+	margin-right:8px;
+}
+
+section ul li button {
+	width:100%;
+	height:50px;
+	border:3px solid #565656;
+	border-radius:25px;
+	background:none;
+	margin-top:10px;
+	font-weight: 700;
+}
+
+section a button {
 	margin-top:47px;
 	width: 200px;
 	height: 60px;
@@ -164,7 +219,7 @@ section button {
 	transition:0.2s linear;
 }
 
-section button:hover {
+section a button:hover {
 	background:#333;
 	color:white;
 }
