--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -11,6 +11,7 @@ body {
 	background:#fff;
 	--webkit-font-smoothing:antialiased;
 	font:400 14px Roboto, sans-serif;
+	scroll-behavior: smooth;
 }
 
 input, button {
@@ -76,6 +77,7 @@ button {
 	padding:20px 100px;	
 	background:white;
 	color:#333;
+	z-index: 10;
 }
 
 .container-films header nav.fixed {
@@ -103,6 +105,15 @@ button {
 	margin:0 20px;
 	font-size:20px;
 	font-weight:bold;
+}
+
+.container-films header nav ul li a {
+	color:#333;
+	text-decoration:none;
+}
+
+.container-films header nav ul li a:hover {
+	color:#666;
 }
 
 .container-films header nav .burger {
@@ -216,6 +227,12 @@ section .films-filter .filter button {
 	background:#333;
 	border-radius:50%;
 	border:none;
+	transition:0.2s;
+}
+
+section .films-filter .filter button:hover {
+	filter: brightness(1.2);
+	transform:translateX(5px);
 }
 
 section ul {
@@ -257,22 +274,11 @@ section ul li button {
 	background:none;
 	margin-top:10px;
 	font-weight: 700;
+	transition:0.2s;
 }
 
-section a button {
-	margin-top:47px;
-	width: 200px;
-	height: 60px;
-	border: 4px solid #333;
-	border-radius: 10px;
-	background:none;
-	font-weight: bold;
-	font-size: 24px;
-	transition:0.2s linear;
-}
-
-section a button:hover {
-	background:#333;
+section ul li button:hover {
+	background:#565656;
 	color:white;
 }
 
