--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -193,46 +193,64 @@ section {
 	padding:0 100px;
 }
 
-section .films-filter {
-	display:flex;
-	justify-content:space-around;
-	align-items: center;
-		
+
+section h2 {
+	font-size:35px;
+	margin-bottom:20px;
 }
 
-section .films-filter h2 {
-	font-size:35px;
+section .films-filter {
+	display:flex;
+	align-items:center;
+	justify-content:space-between;
 }
+
 
 section .films-filter .filter {
 	display:flex;
-	justify-content:center;
 	align-items:center;
-}
-
-section .films-filter .filter select {
-	width:200px;
-	height:50px;
-	font-size:24px;
-	background:white;
-	border:3px solid #333;
-	border-radius:25px;
-	margin-right:20px;
-	padding:0 10px;
+	justify-content:space-between;
 }
 
 section .films-filter .filter button {
-	height:50px;
 	width:50px;
-	background:#333;
-	border-radius:50%;
+	height:50px;
 	border:none;
-	transition:0.2s;
+	background:#5364FF;
+	border-radius: 10px;
+	margin-right:10px;
 }
 
-section .films-filter .filter button:hover {
-	filter: brightness(1.2);
-	transform:translateX(5px);
+section .films-filter .filter select {
+	width:300px;
+	height:50px;
+	font-size:24px;
+	background:#F6F6F6;
+	border:none;
+	border-radius:10px;
+	padding:0 15px;
+	font-size:20px;
+	font-weight: 500;
+}
+
+section .films-filter .searchFilms form input {
+	width: 300px;
+	height:50px;
+	background-color: #F6F6F6;
+	border-radius: 10px;
+	padding:0 15px;
+	font-size:16px;
+	border:none;
+	color:#333;
+	margin-right:5px;
+}	
+
+section .films-filter .searchFilms form button {
+	width:50px;
+	height:50px;
+	border:none;
+	background:#5364FF;
+	border-radius: 10px;
 }
 
 section ul {
