--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -52,6 +52,8 @@ button {
 	transform:rotate(45deg);
 	font-size:100px;
 	z-index: 10;
+	font-weight:400;
+	cursor:pointer;
 }
 
 .container-films #view-film-full-screen iframe {
@@ -269,7 +271,7 @@ section ul li {
 	display:flex;
 	flex-direction:column;
 	justify-content:space-around;
-
+	border-radius:10px;
 }
 
 section ul li p {
@@ -287,16 +289,17 @@ section ul li p span {
 section ul li button {
 	width:100%;
 	height:50px;
-	border:3px solid #565656;
-	border-radius:25px;
-	background:none;
+	border:none;
+	background:#5364FF;
+	border-radius:10px;
 	margin-top:10px;
 	font-weight: 700;
 	transition:0.2s;
+	color:white;
 }
 
 section ul li button:hover {
-	background:#565656;
+	filter: brightness(0.8);
 	color:white;
 }
 
